--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.30.1",
     "mqtt": "^5.10.4",
     "mssql": "^11.0.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.1",
     "socket.io": "^4.8.1"
   }
